syntax = "proto3";
package OpenIMChat.common;
option go_package = "github.com/OpenIMSDK/chat/pkg/proto/common";


message UserFullInfo{
  string  userID = 1;
  string  password = 2;
  string  account = 3;
  string  phoneNumber = 4;
  string  areaCode = 5;
  string  email = 6;
  string  nickname = 7;
  string  faceURL = 8;
  int32  gender = 9;
  int32  level = 10;
  int64 birth = 11;
  int32  allowAddFriend = 12;
  int32  allowBeep = 13;
  int32  allowVibration = 14;
}

message UserPublicInfo{
  string  userID = 1;
  string  account = 2;
  string  email = 3;
  string  nickname = 4;
  string  faceURL = 5;
  int32  gender = 6;
  int32  level = 7;
  string password = 8;
}

message UserIdentity {
  string email = 1;
  string areaCode = 2;
  string phoneNumber = 3;
  string deviceID = 4;
  int32 platform = 5;
  string account = 6;
}


message AppletInfo  {
  string id = 1;
  string name = 2;
  string appID = 3;
  string icon = 4;
  string url = 5;
  string md5 = 6;
  int64 size = 7;
  string version = 8;
  uint32 priority = 9;
  uint32 status = 10;
  int64 createTime = 11;
}

message Department {
  string departmentID = 1;
  string faceURL = 2;
  string name = 3;
  string parentID = 4;
  int32 order = 5;
  int32 departmentType = 6;
  string  relatedGroupID = 7;
  int64 createTime = 8;
  uint32 memberNum = 9;
  string position = 10;
}

message CommonResp {
  int32  errCode = 1;
  string errMsg = 2;
}

message OrganizationUser  {
  string userID = 1;
  string  nickname = 2;
  string   englishName = 3;
  string  faceURL = 4;
  int32   gender = 5;
  string   mobile = 6;
  string telephone = 7;
  int64 birth = 8;
  string  email = 9;
  int32 order = 10;
  int32 status = 11;
  int64   createTime = 12;
  string ex = 13;
  repeated DepartmentMember departmentMemberList = 14;
  string station = 15;
  string areaCode = 16;
}

message DepartmentMember {
  string userID = 1;
  string departmentID = 2;
  int32 order = 3;
  string position = 4;
  int32 leader = 5;
  int32 status = 6;
  string ex = 7;
  int64  entryTime = 8;
  int64  terminationTime = 9;
  int64 createTime = 10;
  Department department = 11;
  OrganizationUser organizationUser = 12;
}

message  UserInDepartment {
  OrganizationUser organizationUser = 1;
  repeated DepartmentMember departmentMemberList = 2;
}

message Organization {
  string  logoURL = 1;
  string    name = 2;
  string  homepage = 3;
  string   relatedGroupID = 4;
  string  introduction = 5;
  int64  createTime = 6;
  int64  defaultPassword = 7;
}

message RequestPagination {
  int32 pageNumber = 1;
  int32 showNumber = 2;
}

message Operation {
  string opUserID = 1;
  string operationID = 2;
}